clean up and some fixes
